2003-06-18  Werner Koch  <wk@gnupg.org>

	* benchmark.c (cipher_bench): Adjusted for new API of get_blklen
	and get_keylen.

	* gcrypt.h (gcry_cipher_get_algo_blklen)
	(gcry_cipher_get_algo_keylen): Replaced macro by funcion.

2003-06-18  Moritz Schulte  <moritz@g10code.com>

	* cipher.h: Renamed types GcryDigestSpec, GcryCipherSpec and
	GcryPubkeySpec into: gcry_digest_spec_t, gcry_cipher_spec_t and
	gcry_pubkey_spec_t.
	(gcry_pubkey_spec): Defined member `id' as unsigned.
	(gcry_digest_spec): Likewise.
	(gcry_cipher_spec): Likewise.

	* module.c (_gcry_module_id_new): New function.
	(_gcry_module_add): Generate a new ID via _gcry_module_id_new in
	case `id' is zero.

	* g10lib.h, module.c: Replace old type GcryModule with newer one:
	gcry_module_t.

	* module.c (_gcry_module_add): Added argument `id', use it.

	* g10lib.h: Added declaration: _gcry_module_lookup_id.
	(_gcry_module_add): Added argument `id'.

	* module.c (_gcry_module_lookup_id): New function.

	* g10lib.h (struct gcry_module): New member: id.

	* gcrypt.h: New type: gcry_handler_progress_t,
	gcry_handler_alloc_t, gcry_haandler_secure_check_t,
	gcry_handler_realloc_t, gcry_handler_free_t,
	gcry_handler_no_mem_t, gcry_handler_error_t, gcry_handler_log_t.
	Use new types.

	* cipher.h: Include <gcrypt.h>.
	New types: gcry_pk_generate_t, gcry_pk_check_secret_key_t,
	gcry_pk_encrypt_t, gcry_pk_decrypt_t, gcry_pk_sign_t,
	gcry_pk_verify_t, gcry_pk_get_nbits_t, gcry_md_init_t,
	gcry_md_write_t, gcry_md_final_t, gcry_md_read_t,
	gcry_cipher_setkey_t, gcry_cipher_encrypt_t,
	gcry_cipher_decrypt_t, gcry_cipher_stencrypt_t,
	gcry_cipher_stdecrypt_t.
	Use new types.

2003-06-17  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (AM_CFLAGS): Added: @GPG_ERROR_CFLAGS@.

2003-06-16  Moritz Schulte  <moritz@g10code.com>

	* g10lib.h: Replace last occurences of old type names with newer
	names (i.e. replace MPI with gcry_mpi_t).
	* mpi.h: Likewise.
	* sexp.c: Likewise.
