@@ -1,3 +1,13 @@
+2003-07-02  Moritz Schulte  <moritz@g10code.com>
+
+	* gcrypt.h: Added all definitions and declarations necessary for
+	the new ac interface.
+
+2003-06-30  Moritz Schulte  <moritz@g10code.com>
+
+	* g10lib.h: Added declarations: _gcry_pk_module_lookup,
+	_gcry_pk_module_release.
+
 2003-06-18  Werner Koch  <wk@gnupg.org>
 
 	* benchmark.c (cipher_bench): Adjusted for new API of get_blklen
